# lerobot-data-viewer

./: .AGENT.md  .gitignore  Makefile  README.md  index.html  pyproject.toml
assets/: index-047da984.css  index-06806167.js  index-0b09841d.css  index-0e61d4c4.js  index-377c68d9.js  index-48b1ede2.js  index-68a4572f.js  index-79e4e719.css  index-8fa4d398.js  index-c2a67704.js
backend/lerobot_viewer/: api.py  cli.py  config.py  db.py  identity.py  indexer.py  main.py  stats.py  timeseries.py
config/: datasets.yaml
docs/: changelog.md  code-structure.md  functional-requirements.md  plan.md  public-frontend.md
scripts/: start_server.sh
tests/: test_config.py  test_episode_search.py  test_identity.py  test_schema_features.py  test_stats.py  test_task_discovery.py  test_task_summary.py  test_timeseries.py  test_video_duration.py
web/: .env.example  index.html  package-lock.json  package.json
web/src/: api.ts  main.tsx  styles.css  types.ts
