[project]
name = "lerobot-data-viewer"
version = "0.1.0"
description = "Read-only dashboard and episode browser for LeRobot v2.1 datasets."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "numpy>=1.24",
  "pyarrow>=15",
  "pyyaml>=6",
  "uvicorn[standard]>=0.27,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

